--- a/index.html
+++ b/index.html
@@ -954,10 +954,10 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <div class="profile-frame">
-                    <p>Profile Image Will Be Added Later</p>
-                    <div class="image-decoration"></div>
-                </div>
+    <div class="profile-frame">
+        <img src="profile-keerthana.jpg" alt="Keerthana Raveendra" style="width: 100%; height: 100%; object-fit: cover;">
+        <div class="image-decoration"></div>
+    </div>
             </div>
             <div class="about-text">
                 <p>I'm a student leader and social entrepreneur dedicated to driving positive change in mental health and women's wellness. With a strong academic foundation in A Levels Mathematics, Economics, and Business, I balance rigorous academics with a deep commitment to community impact.</p>
