--- a/index.html
+++ b/index.html
@@ -1023,35 +1023,25 @@
                 <!-- Akshata Foundation -->
                 <div class="project-card">
                     <div class="project-slider" id="akshata-slider">
-                        <button class="slider-btn slider-btn-prev">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M15 18l-6-6 6-6"/>
-                            </svg>
-                        </button>
-                        <div class="slide-container">
-                            <div class="project-slide">
-                                <p>Akshata Foundation Photo 1 Will Be Added Later</p>
-                            </div>
-                            <div class="project-slide">
-                                <p>Akshata Foundation Photo 2 Will Be Added Later</p>
-                            </div>
-                            <div class="project-slide">
-                                <p>Akshata Foundation Photo 3 Will Be Added Later</p>
-                            </div>
-                            <div class="project-slide">
-                                <p>Akshata Foundation Photo 4 Will Be Added Later</p>
-                            </div>
-                            <div class="project-slide">
-                                <p>Akshata Foundation Photo 5 Will Be Added Later</p>
-                            </div>
-                        </div>
-                        <button class="slider-btn slider-btn-next">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M9 18l6-6-6-6"/>
-                            </svg>
-                        </button>
-                        <div class="slider-nav"></div>
-                    </div>
+    <button class="slider-btn slider-btn-prev">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M15 18l-6-6 6-6"/>
+        </svg>
+    </button>
+    <div class="slide-container">
+        <div class="project-slide" style="background-image: url('images_akshata/akshata_1.png')"></div>
+        <div class="project-slide" style="background-image: url('images_akshata/akshata_2.png')"></div>
+        <div class="project-slide" style="background-image: url('images_akshata/akshata_3.png')"></div>
+        <div class="project-slide" style="background-image: url('images_akshata/akshata_4.png')"></div>
+        <div class="project-slide" style="background-image: url('images_akshata/akshata_5.png')"></div>
+    </div>
+    <button class="slider-btn slider-btn-next">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M9 18l6-6-6-6"/>
+        </svg>
+    </button>
+    <div class="slider-nav"></div>
+</div>
                     <div class="project-info">
                         <h3 class="project-title">Akshata Foundation</h3>
                         <p class="project-description">As Co-head of Akshata Foundation, a student-led non-profit organization founded in 2023, I've helped drive our mission to help underprivileged women and children around India by introducing safe sanitary practices and equipment. Our motto, "Nurturing Lifelong Wellness," reflects our belief that everyone has the right to access accurate information about menstruation, cervical cancer, and other common conditions affecting women.</p>
