--- a/index.html
+++ b/index.html
@@ -1019,22 +1019,22 @@
                         </button>
                         <div class="slide-container">
                             <div class="project-slide">
-                                <img src="minds_aligned_1.png" alt="Minds Aligned">
+                                <img src="images_minds_aligned/minds_aligned_1.png" alt="Minds Aligned">
                             </div>
                             <div class="project-slide">
-                                <img src="minds_aligned_2.png" alt="Minds Aligned">
+                                <img src="images_minds_aligned/minds_aligned_2.png" alt="Minds Aligned">
                             </div>
                             <div class="project-slide">
-                                <img src="minds_aligned_3.png" alt="Minds Aligned">
+                                <img src="images_minds_aligned/minds_aligned_3.png" alt="Minds Aligned">
                             </div>
                             <div class="project-slide">
-                                <img src="minds_aligned_4.png" alt="Minds Aligned">
+                                <img src="images_minds_aligned/minds_aligned_4.png" alt="Minds Aligned">
                             </div>
                             <div class="project-slide">
-                                <img src="minds_aligned_5.png" alt="Minds Aligned">
+                                <img src="images_minds_aligned/minds_aligned_5.png" alt="Minds Aligned">
                             </div>
                             <div class="project-slide">
-                                <img src="minds_aligned_6.png" alt="Minds Aligned">
+                                <img src="images_minds_aligned/minds_aligned_6.png" alt="Minds Aligned">
                             </div>
                         </div>
                         <button class="slider-btn slider-btn-next">
