--- a/index.html
+++ b/index.html
@@ -1005,15 +1005,15 @@
                 
                 <div class="key-points">
                     <div class="key-point">
-                        <div class="key-icon">🌟</div>
-                        <div class="key-text">Social Entrepreneur</div>
+                        <div class="key-icon">📊</div>
+                        <div class="key-text">Young Economist</div>
                     </div>
                     <div class="key-point">
-                        <div class="key-icon">🌱</div>
-                        <div class="key-text">Mental Health Advocate</div>
+                        <div class="key-icon">🍀</div>
+                        <div class="key-text">Student Changemaker</div>
                     </div>
                     <div class="key-point">
-                        <div class="key-icon">💼</div>
+                        <div class="key-icon">⭐</div>
                         <div class="key-text">Student Leader</div>
                     </div>
                 </div>
