--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@
                         </button>
                         <div class="slide-container">
                             <div class="project-slide">
-                                <img src="images_junior_mba/junior_mba_1.png" alt="Junior MBA">
+                                <img src="junior_mba_1.png" alt="Junior MBA">
                             </div>
                         </div>
                         <button class="slider-btn slider-btn-next">
