--- a/index.html
+++ b/index.html
@@ -842,7 +842,9 @@
 .profile-frame img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain; /* Change from cover to contain */
+    display: block;
+    margin: 0 auto;
 }
 
 .image-decoration {
